	  Thanks to Michal Josef Špaček.
	- OpenSSL 3.0 related changes in tests include:
	  - TLSv1 and TLSv1.1 require security level 0 starting with 3.0 alpha 5.
	  - SSL_CTX_set_ciphersuites() and SSL_set_ciphersuites() ignore
	    unknown ciphersuites starting with 3.0 alpha 11.
	  - Error code and error string packing and formatting changes.
	- See OpenSSL manual page migration_guide(7) for more information about
	  changes in OpenSSL 3.0.
	- Automatically detect OpenSSL installed via Homebrew on ARM-based macOS
	  systems. Thanks to Graham Knop for the patch.
	- Account for the divergence in TLSv1.3 ciphersuite names between OpenSSL and
	  LibreSSL, which was causing failures of some TLSv1.3 tests with LibreSSL.
	- In 36_verify.t, account for the presence of the X509_V_FLAG_LEGACY_VERIFY
	  flag (signalling the use of the legacy X.509 verifier) in LibreSSL 3.3.2 and
	  above.
	- In 43_misc_functions.t, account for the fact that LibreSSL 3.2.0 and above
	  implement TLSv1.3 without exposing a TLS1_3_VERSION constant.

1.90 2021-01-21
	- New stable release incorporating all changes from developer releases
	  1.89_01 to 1.89_05.
	- Summary of major changes since version 1.88:
	  - Formalised libssl version support policy: all stable versions of OpenSSL
	    in the 0.9.8 - 1.1.1 branches (with the exception of 0.9.8 - 0.9.8b) and
	    all stable releases of LibreSSL in the 2.0 - 3.1 series are supported.
	    The LibreSSL 3.2 series is not yet fully supported because its TLSv1.3
	    implementation is not currently libssl-compatible.
	  - Added support for LibreSSL on Windows when built with Visual C++.
	  - Exposed P_X509_CRL_add_extensions, several SSL_CIPHER functions, and
	    several stack functions.
	  - Fixed crashes in the callback functions CTX_set_next_proto_select_cb and
	    CTX_set_alpn_select_cb.
	  - The test suite is now compatible with OpenSSL 1.1.1e onwards, as well as
	    OpenSSL security level 2 (the default on many Linux distributions).
