@@ -199,6 +199,9 @@ t/local/11_read.t
 t/local/15_bio.t
 t/local/20_autoload.t
 t/local/21_constants.t
+t/local/22_provider.t
+t/local/22_provider_try_load.t
+t/local/22_provider_try_load_zero_retain.t
 t/local/30_error.t
 t/local/31_rsa_generate_key.t
 t/local/32_x509_get_cert_info.t
