@@ -23,6 +23,7 @@ Revision history for Perl extension Net::SSLeay.
 	  - SSL_CTX_set_ciphersuites() and SSL_set_ciphersuites() ignore
 	    unknown ciphersuites starting with 3.0 alpha 11.
 	  - Error code and error string packing and formatting changes.
+	  - PEM_get_string_PrivateKey default algorithm requires legacy provider.
 	- See OpenSSL manual page migration_guide(7) for more information about
 	  changes in OpenSSL 3.0.
 	- Automatically detect OpenSSL installed via Homebrew on ARM-based macOS
@@ -34,6 +35,17 @@ Revision history for Perl extension Net::SSLeay.
 	  above.
 	- In 43_misc_functions.t, account for the fact that LibreSSL 3.2.0 and above
 	  implement TLSv1.3 without exposing a TLS1_3_VERSION constant.
+	- Expose OpenSSL 3.0 functions
+	  OSSL_LIB_CTX_get0_global_default, OSSL_PROVIDER_load,
+	  OSSL_PROVIDER_try_load, OSSL_PROVIDER_unload,
+	  OSSL_PROVIDER_available, OSSL_PROVIDER_do_all
+	  OSSL_PROVIDER_get0_name and OSSL_PROVIDER_self_test.
+	  Add test files 22_provider.t, 22_provider_try_load.t and
+	  22_provider_try_load_zero_retain.t.
+	- With OpenSSL 3.0 and later, the legacy provider is loaded in
+	  33_x509_create_cert.t to allow PEM_get_string_PrivateKey to
+	  continue working until its default encryption method is
+	  updated. Fixes GH-272 and closes GH-273.
 
 1.90 2021-01-21
 	- New stable release incorporating all changes from developer releases
